<resources>
    <string name="app_name">EAT-SSU</string>
    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>
    <string name="title_review_write">리뷰 작성하기</string>
    <string name="title_review_modify">리뷰 수정하기</string>
    <string name="title_sign_out">탈퇴하기</string>
    <string name="title_report">신고하기</string>
    <string name="title_widget_setting">위젯 설정</string>
    <string name="title_partnership_map">제휴 지도</string>
    <string name="title_good_price_map">착한가격업소 지도</string>
    <string name="title_force_update">강제 업데이트</string>
    <string name="tab_school_partnership">학교 제휴</string>
    <string name="festival_partnership_help_title">2026 동연제 제휴 매장을 확인해보세요!</string>
    <string name="festival_partnership_help_warning">기존 제휴와 중복 적용되지 않아요.</string>
    <string name="festival_partnership_help_content_description">축제 제휴 안내</string>
    <string name="tab_good_price">착한 가격</string>
    <string name="nav_cafeteria_menu">학식</string>
    <string name="nav_map">지도</string>
    <string name="nav_anyone_but_me">나만아니면돼~</string>
    <string name="nav_mypage">마이</string>
    <string name="nav_back">back</string>
    <string name="button_complete">완료하기</string>
    <string name="button_modify">수정하기</string>
    <string name="button_delete">삭제하기</string>
    <string name="button_save">저장하기</string>
    <string name="button_report">신고하기</string>
    <string name="button_cancel">취소</string>
    <string name="button_confirm">확인</string>
    <string name="button_close">닫기</string>
    <string name="button_retry">재시도</string>
    <string name="button_update">업데이트</string>
    <string name="button_check_duplicate">중복확인</string>
    <string name="dialog_logout_title">로그아웃</string>
    <string name="dialog_logout_message">로그아웃 하시겠습니까?</string>
    <string name="dialog_force_update_message">새 버전의 앱을 설치해야 합니다.</string>
    <string name="dialog_location_permission_description">내 위치를 바로 확인하며 제휴 식당을 찾아볼 수 있도록 위치 권한을 허용해 주세요.</string>
    <string name="dialog_notification_permission_title">알림 권한 필요</string>
    <string name="dialog_notification_permission_description">알림을 받으려면 알림 권한을 활성화해야 합니다.\n설정에서 알림 권한을 허용해주세요.</string>
    <string name="dialog_settings">설정으로 이동</string>
    <string name="dialog_placeholder_title">제목을 입력해주세요</string>
    <string name="dialog_placeholder_body">본문을 입력해주세요</string>
    <string name="dialog_network_error_title">네트워크 연결 안 됨</string>
    <string name="dialog_network_error_message">Wi-Fi, 모바일 데이터를 확인해주세요</string>
    <string name="dialog_notice_title">공지</string>
    <string name="toast_review_write_success">리뷰가 등록되었어요.</string>
    <string name="toast_review_write_failed">리뷰 작성에 실패하였습니다.</string>
    <string name="toast_review_modify_success">리뷰를 수정했습니다.</string>
    <string name="toast_review_modify_failed">리뷰 수정이 실패했습니다.</string>
    <string name="toast_review_delete_success">리뷰가 삭제되었어요.</string>
    <string name="toast_review_delete_failed">리뷰 삭제에 실패했습니다.</string>
    <string name="toast_review_load_failed">리뷰를 불러오지 못했습니다.</string>
    <string name="toast_image_upload_success">이미지가 업로드되었습니다.</string>
    <string name="toast_image_upload_failed">이미지 업로드에 실패하였습니다.</string>
    <string name="toast_image_compress_failed">이미지 압축에 실패하였습니다.</string>
    <string name="toast_image_not_found">이미지 파일을 찾을 수 없습니다.</string>
    <string name="toast_report_success">신고가 성공적으로 접수되었어요!</string>
    <string name="toast_report_failed">신고가 실패하였습니다.</string>
    <string name="toast_nickname_change_failed">닉네임 변경에 실패했어요.</string>
    <string name="toast_college_required">단과대를 먼저 선택해주세요.</string>
    <string name="toast_department_required">학과를 선택해주세요.</string>
    <string name="toast_info_updated">정보가 업데이트되었습니다.</string>
    <string name="toast_nickname_changed">닉네임이 변경되었습니다.</string>
    <string name="toast_department_updated">학과 정보가 업데이트되었습니다.</string>
    <string name="toast_no_changes">변경사항이 없습니다.</string>
    <string name="nickname_error_length">%1$d~%2$d글자를 입력해 주세요.</string>
    <string name="nickname_error_whitespace">띄어쓰기를 제외한 공백 문자는 사용할 수 없어요.</string>
    <string name="nickname_error_consecutive_space">연속된 띄어쓰기는 사용할 수 없어요.</string>
    <string name="nickname_error_allowed_chars">허용 문자(한글/영문/숫자)만 사용할 수 있어요.</string>
    <string name="nickname_error_consecutive_special">연속된 특수문자(--, __)는 사용할 수 없어요.</string>
    <string name="nickname_error_only_numbers">숫자만으로 된 닉네임은 사용할 수 없어요.</string>
    <string name="nickname_error_special_position">특수문자로 시작/끝나는 닉네임은 사용할 수 없어요.</string>
    <string name="nickname_error_profanity">욕설, 비속어 등의 표현이 포함된 닉네임은 사용할 수 없어요.</string>
    <string name="nickname_error_invalid">올바르지 않은 닉네임이에요.</string>
    <string name="toast_app_init_error">앱 초기화 중 오류가 발생했습니다</string>
    <string name="toast_app_update_required">앱을 업데이트해주세요</string>
    <string name="toast_partnership_info_not_found">제휴 정보가 없습니다.</string>
    <string name="toast_login_failed">로그인에 실패했어요.</string>
    <string name="toast_logout_success">로그아웃했어요.</string>
    <string name="toast_token_invalid">다시 로그인해주세요.</string>
    <string name="toast_token_expired">세션이 만료되어 다시 로그인해주세요.</string>
    <string name="toast_require_nickname">닉네임을 설정해주세요.</string>
    <string name="toast_notification_enable">EAT-SSU 수신 동의 (%1$s)</string>
    <string name="toast_notification_disable">EAT-SSU 수신 거절 (%1$s)</string>
    <string name="toast_oss_load_fail">오픈소스 라이브러리를 불러올 수 없어요.</string>
    <string name="toast_sign_out_success">회원탈퇴되었어요.</string>
    <string name="toast_sign_out_fail">회원탈퇴에 실패했어요.</string>
    <string name="toast_load_good_price_stores_failed">업소 정보를 불러오지 못했어요.</string>
    <string name="btn_browse_good_price_stores">착한가격업소 둘러보기</string>
    <string name="btn_browse_good_price_stores_subtitle">내 주변 착한 한 끼를 찾아보세요</string>
    <string name="review_how_was_meal">오늘의 식사는 어땠나요?</string>
    <string name="review_recommend_menu">추천하고 싶은 메뉴가 있나요?</string>
    <string name="review_placeholder">메뉴에 대한 상세한 리뷰를 작성해주세요</string>
    <string name="review_preparing">화면을 준비하는 중입니다.</string>
    <string name="review_posting">작성 중...</string>
    <string name="review_modifying">수정 중...</string>
    <string name="review_photo_delete_hint">사진 클릭 시, 삭제됩니다.</string>
    <string name="review_photo_count">사진 추가(%1$d/%2$d)</string>
    <string name="review_settings">리뷰 설정</string>
    <string name="review_error_occurred">에러가 발생했습니다.</string>
    <string name="review_menu_info_load_failed">메뉴 정보를 불러오지 못했습니다.\n다시 시도해주세요.</string>
    <string name="review_additional_data_load_failed">추가 리뷰를 불러오지 못했습니다.</string>
    <string name="review_show_translation">번역 보기</string>
    <string name="review_translate">번역하기</string>
    <string name="review_show_original">원문 보기</string>
    <string name="review_translating">번역 중...</string>
    <string name="review_translated_by_ai">AI가 한국어에서 번역함</string>
    <string name="review_translation_unavailable">번역을 사용할 수 없음</string>
    <string name="review_translation_accuracy_notice">AI 번역은 항상 정확하지 않을 수 있습니다.</string>
    <string name="review_translation_unavailable_notice">현재 AI 번역을 사용할 수 없습니다.\n나중에 다시 시도해 주세요.</string>
    <string name="review_translation_information">번역 안내</string>
    <string name="review_profile_image">프로필 이미지</string>
    <string name="review_more">리뷰 메뉴</string>
    <string name="review_image">리뷰 이미지</string>
    <string name="toast_review_translation_failed">리뷰 번역에 실패했습니다.</string>
    <string name="toast_review_translation_unchanged">번역 결과가 원문과 동일합니다.</string>
    <string name="review_write">리뷰 작성하기</string>
    <string name="review">리뷰</string>
    <string name="my_review">내 리뷰</string>
    <string name="none_review">아직 작성한 리뷰가 없어요</string>
    <string name="none_review_my">첫 리뷰를 남겨 주세요!</string>
    <string name="none_review_list_detail">메뉴에 가장 먼저 리뷰를 남겨주세요!</string>
    <string name="rate_n">%1$d점</string>
    <string name="today_menu">오늘의 메뉴</string>
    <string name="cafeteria_outside_business_hours">영업 시간이 아니에요.</string>
    <string name="price">가격</string>
    <string name="rate">평점</string>
    <string name="student_cafeteria">학생식당</string>
    <string name="widget_select_restaurant">확인하고 싶은 식당을 선택하세요.</string>
    <string name="widget_select">선택하기</string>
    <string name="widget_morning">아침</string>
    <string name="widget_lunch">점심</string>
    <string name="widget_dinner">저녁</string>
    <string name="widget_no_menu">오늘의 메뉴가 없습니다.</string>
    <string name="widget_loading">로딩 중</string>
    <string name="widget_network_error">네트워크 연결 상태를 확인해주세요.</string>
    <string name="widget_setup_required">설정 필요</string>
    <string name="widget_select_prompt">위젯 설정에서 식당을 선택해주세요.</string>
    <string name="mypage">마이페이지</string>
    <string name="my_info">내 정보</string>
    <string name="logout">로그아웃</string>
    <string name="signout">회원탈퇴</string>
    <string name="app_version">앱 버전</string>
    <string name="mypage_push_activity_section_title">알림 및 활동</string>
    <string name="mypage_service_section_title">서비스 정보</string>
    <string name="mypage_etc_section_title">기타</string>
    <string name="mypage_push_notification_title">푸시 알림 설정</string>
    <string name="mypage_push_notification_description">매일 오전 11시에 알림을 보내드려요</string>
    <string name="language_setting">언어 설정</string>
    <string name="language_select_description">사용할 언어를 선택하세요.</string>
    <string name="language_system_default">시스템 언어 (기본값)</string>
    <string name="kakao">카카오</string>
    <string name="connect_account">연결된 계정</string>
    <string name="nickname">닉네임</string>
    <string name="set_nickname">닉네임을 설정해주세요</string>
    <string name="set_nickname_length">%1$d~%2$d글자를 입력해주세요.</string>
    <string name="set_nickname_able">사용 가능한 닉네임입니다!</string>
    <string name="userinfo_nickname_setting">닉네임 설정</string>
    <string name="userinfo_affiliation_setting">소속 설정</string>
    <string name="not_found">정보를 불러올 수 없어요.</string>
    <string name="server_error_title">통신 오류</string>
    <string name="server_error_message">서버와 통신할 수 없습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="report_title">리뷰를 신고하는 이유를 선택해주세요.</string>
    <string name="report_sub">하나의 리뷰에 대해 24시간 내 한 번만 신고 가능합니다.</string>
    <string name="report_write_hint">리뷰 신고 사유를 작성해 주세요</string>
    <string name="max_150">최대 150자</string>
    <string name="app_slogan_part1">숭실대에서 </string>
    <string name="app_slogan_part2">서울 곳곳까지</string>
    <string name="app_slogan_part3" translatable="false"></string>
    <string name="inquire">문의하기</string>
    <string name="service_rule">서비스 이용약관</string>
    <string name="private_information">개인정보 처리방침</string>
    <string name="policy">개인정보 처리방침</string>
    <string name="terms">서비스 이용약관</string>
    <string name="terms_and_rule">약관 및 정책</string>
    <string name="developer">만든 사람들</string>
    <string name="oss_licenses">오픈소스 라이브러리</string>
    <string name="signout_question">정말 탈퇴하시겠습니까?</string>
    <string name="signout_description">작성한 리뷰는 삭제되지 않으며, (알수없음)으로 표시됩니다.\n자세한 내용은 서비스 이용약관 및 개인정보처리방침을 확인해 주세요.</string>
    <string name="signout_nickname">닉네임을 입력해주세요</string>
    <string name="notification_context_title">🤔 오늘 밥 뭐 먹지</string>
    <string name="notification_context_text">오늘의 학식을 확인해보세요!</string>
    <string name="notification_channel_lunch_name">점심시간 전 알림</string>
    <string name="notification_channel_lunch_description">점심시간 전, 푸시알림을 발송합니다.</string>
    <string name="notification_channel_server_name">서버가 보낸 알림</string>
    <string name="notification_channel_server_description">잇슈 서버가 보낸 알림을 표시합니다.</string>
    <string name="input_department">학과 입력하기</string>
    <string name="input_string_description">학과를 입력하고\n나만의 제휴를 확인해보세요!</string>
    <string name="map_unknown_college_department">단과대/학과 정보를 알 수 없음</string>
    <string name="map_open_kakao">카카오맵</string>
    <string name="location">식당 위치</string>
    <string name="etc">비고</string>
    <string name="time">영업 시간</string>
</resources>