<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cafeteria_menu"
        android:enabled="true"
        android:icon="@drawable/selector_ic_cafeteria_menu"
        android:title="@string/nav_cafeteria_menu"/>

    <item
        android:id="@+id/map_menu"
        android:enabled="true"
        android:icon="@drawable/selector_ic_map"
        android:title="@string/nav_map"/>

    <!--    <item-->
    <!--        android:id="@+id/anyone_but_me_menu"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/ic_anyone_but_me"-->
    <!--        android:title="@string/nav_anyone_but_me"/>-->


    <!-- TODO 찜 기능 완료 시-->
    <!--      <item-->
    <!--        android:id="@+id/favorite_menu"-->
    <!--        android:enabled="true"-->
    <!--        android:icon="@drawable/selector_ic_like"-->
    <!--        android:title="@string/favorite" />-->

    <item
        android:id="@+id/mypage_menu"
        android:enabled="true"
        android:icon="@drawable/selector_ic_mypage"
        android:title="@string/nav_mypage"/>

</menu>
