<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.mypage.SignOutActivity">

    <TextView
        android:id="@+id/tv_sign_out"
        style="@style/Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signout_question"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_out_description"
        style="@style/Caption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/signout_description"
        android:textColor="@color/gray600"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_out"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_out" />


    <EditText
        android:id="@+id/et_enter_nickname"
        style="@style/Body2"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_text_field_small"
        android:hint="@string/signout_nickname"
        android:inputType="text"
        android:maxLength="8"
        android:maxLines="1"
        android:textColorHint="@color/gray400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_out_description" />


    <Button
        android:id="@+id/btn_sign_out"
        style="@style/Button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/shape_button_duplicate"
        android:stateListAnimator="@null"
        android:text="@string/signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>