<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="20dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/drag_handle"
                    android:layout_width="30dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="@color/gray400"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/H1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:textColor="@color/black"
                    tools:text="학생식당"/>
            </LinearLayout>

            <!--  테두리 때문에 카드뷰 씀  -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_photo"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="5dp">

                <ImageView
                    android:id="@+id/iv_cafeteria_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_dodam" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_location_info"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="@color/gray500" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="학생회관 3층"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_time_info"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/gray500" />

                <TextView
                    android:id="@+id/tv_time"
                    style="@style/Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="08:10~09:20\n
천원의 아침밥, 100개 한정\n\n
11:20~14:00\n
점심\n\n
14:00~17:20\n
공간 개방"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_etc_info"
                    style="@style/Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etc"
                    android:textColor="@color/gray500" />

                <TextView
                    android:id="@+id/tv_etc"
                    style="@style/Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:text="3개 코너 운영\n
뚝배기, 덮밥, 양식"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
